# sigmod-benchmarks

./: .gitattributes  .gitignore  CMakeLists.txt  Timer.h  create_submission.sh  main.cpp
benchmarks/: ParallelReadHistoBenchmark.cpp
include/benchmarks/: Benchmark.h  BigTupleMergeBenchmark.h  ColumnStoreBWBenchmark.cpp  ColumnStoreBWBenchmark.h  ColumnStoreBenchmark.h  FileInMemColumnStoreBenchmark.h  IOBenchmark.h  InMemoryBenchmark.h  MergeBenchmark.h  ParallelReadHistoBenchmark.h  SequentialReadHistoBenchmark.h  SingleMMapHistoBenchmark.h  WriteBenchmark.h
include/parallel/: HistogramTask.h  InterleavedHistogramTask.h  WriteTask.h
include/partition/: Partition.h
include/readers/: ASyncReader.h  AltAsyncReader.h  FileReader.h  HybridReadReader.h  MMapReader.h  ReadReader.h
include/structures/: BigTuple.h  Tuple.h
include/tasks/: BigTupleChunkProcess.h  BigTupleSortTask.h  BinsRangeTask.h  ColumnStoreTask.h  ColumnStoreToDisk.h  CopyTask.h  CountTask.h  HistogramTask.h  InterleavedHistogramTask.h  MemColumnStoreTask.h  MergeChunkTask.h  PrepMergeBufferTask.h  RadixQuicksort.h  RadixSortPassTask.h  RandomReadSortedTask.h  RandomWriteSortedTask.h  ReadSortedRAMTask.h  ReadTask.h  ReorderTask.h  WriteTask.h
include/tests/: ascii_tests.h
include/utilities/: AsyncUtils.h  Constants.h  ThreadPool.h  Timer.h  Utils.h  borrowedsort.h
include/writers/: BufferringWriter.h  FileWriter.h
io-benchmarks/: FileReader.h  MMapReader.cpp  MMapReader.h  ReadReader.cpp  ReadReader.h  StreamReader.cpp  StreamReader.h
partition/: Partition.cpp  Partition.h
radixSort/: Constants.h  Makefile  Timer.h  radixsort.cpp  utils.cpp  utils.h
radix_sort/: Makefile  compile.sh
radix_sort/include/: macro.hpp  types.hpp
radix_sort/include/benchmark/: benchmark.hpp
radix_sort/test/: horizontal_range_17.cpp  range-partitioning-17.cpp  vertical_range_8.cpp
readers/: MMapReader.cpp  ReadReader.cpp  StreamReader.cpp
scripts/: compile.sh  multi_run.sh  run_sort.sh
src/: main.cpp
src/benchmarks/: BigTupleMergeBenchmark.cpp  BigTupleMergeBenchmark.h  ColumnStoreBWBenchmark.cpp  ColumnStoreBenchmark.cpp  FileInMemColumnStoreBenchmark.cpp  IOBenchmark.cpp  InMemoryBenchmark.cpp  MergeBenchmark.cpp  ParallelReadHistoBenchmark.cpp  SequentialReadHistoBenchmark.cpp  SingleMMapHistoBenchmark.cpp  WriteBenchmark.cpp
src/parallel/: HistogramTask.cpp
src/partition/: Partition.cpp
src/readers/: ASyncReader.cpp  AltAsyncReader.cpp  HybridReadReader.cpp  MMapReader.cpp  ReadReader.cpp
src/utilities/: AsyncUtils.cpp  Constants.cpp  ThreadPool.cpp  Utils.cpp
src/writers/: BufferringWriter.cpp
